MinhaLinguagemParser.cpp

// Generated from MinhaLinguagem.g4 by ANTLR 4.13.1


#include "MinhaLinguagemListener.h"
#include "MinhaLinguagemVisitor.h"

#include "MinhaLinguagemParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct MinhaLinguagemParserStaticData final {
  MinhaLinguagemParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  MinhaLinguagemParserStaticData(const MinhaLinguagemParserStaticData&) = delete;
  MinhaLinguagemParserStaticData(MinhaLinguagemParserStaticData&&) = delete;
  MinhaLinguagemParserStaticData& operator=(const MinhaLinguagemParserStaticData&) = delete;
  MinhaLinguagemParserStaticData& operator=(MinhaLinguagemParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag minhalinguagemParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
MinhaLinguagemParserStaticData *minhalinguagemParserStaticData = nullptr;

void minhalinguagemParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (minhalinguagemParserStaticData != nullptr) {
    return;
  }
#else
  assert(minhalinguagemParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<MinhaLinguagemParserStaticData>(
    std::vector<std::string>{
      "programa", "declaracao_classe", "membro", "declaracao_construtor", 
      "declaracao_funcao", "parametros", "parametro", "declaracao_variavel", 
      "bloco", "declaracao", "estrutura_controle", "expressao", "tipo_base", 
      "tipo", "anotacao", "funcaoMain"
    },
    std::vector<std::string>{
      "", "'extends'", "'new'", "'main'", "';'", "','", "'('", "')'", "'{'", 
      "'}'", "'='", "'['", "']'", "'.'", "':'", "'public'", "'private'", 
      "'protected'", "'static'", "'String'", "'@Override'", "'+'", "'-'", 
      "'*'", "'/'", "'>'", "'>='", "'<'", "'<='", "'=='", "'!='", "'&&'", 
      "'||'", "'if'", "'else'", "'while'", "'for'", "'class'", "'return'", 
      "'int'", "'float'", "'char'", "'string'", "'void'"
    },
    std::vector<std::string>{
      "", "", "", "", "PONTO_VIRGULA", "VIRGULA", "ABRE_PARENTESES", "FECHA_PARENTESES", 
      "ABRE_CHAVES", "FECHA_CHAVES", "ATRIBUICAO", "ABRE_COLCHETES", "FECHA_COLCHETES", 
      "PONTO", "DOIS_PONTOS", "PUBLIC", "PRIVATE", "PROTECTED", "STATIC", 
      "STRING_TYPE", "OVERRIDE", "MAIS", "MENOS", "MULT", "DIV", "MAIOR", 
      "MAIOR_IGUAL", "MENOR", "MENOR_IGUAL", "IGUAL", "DIFERENTE", "E_LOGICO", 
      "OU_LOGICO", "IF", "ELSE", "WHILE", "FOR", "CLASS", "RETURN", "INT", 
      "FLOAT", "CHAR", "STRING", "VOID", "IDENTIFICADOR", "NUM_INT", "NUM_FLOAT", 
      "TEXTO", "COMENTARIO", "COMENTARIO_BLOCO", "ESPACO", "CARACTERE"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  minhalinguagemParserStaticData = staticData.release();
}

}

MinhaLinguagemParser::MinhaLinguagemParser(TokenStream *input) : MinhaLinguagemParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

MinhaLinguagemParser::MinhaLinguagemParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  MinhaLinguagemParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *minhalinguagemParserStaticData->atn, minhalinguagemParserStaticData->decisionToDFA, minhalinguagemParserStaticData->sharedContextCache, options);
}

MinhaLinguagemParser::~MinhaLinguagemParser() {
  delete _interpreter;
}

const atn::ATN& MinhaLinguagemParser::getATN() const {
  return *minhalinguagemParserStaticData->atn;
}

std::string MinhaLinguagemParser::getGrammarFileName() const {
  return "MinhaLinguagem.g4";
}

const std::vector<std::string>& MinhaLinguagemParser::getRuleNames() const {
  return minhalinguagemParserStaticData->ruleNames;
}

const dfa::Vocabulary& MinhaLinguagemParser::getVocabulary() const {
  return minhalinguagemParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView MinhaLinguagemParser::getSerializedATN() const {
  return minhalinguagemParserStaticData->serializedATN;
}


//----------------- ProgramaContext ------------------------------------------------------------------

MinhaLinguagemParser::ProgramaContext::ProgramaContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MinhaLinguagemParser::ProgramaContext::EOF() {
  return getToken(MinhaLinguagemParser::EOF, 0);
}

std::vector<MinhaLinguagemParser::Declaracao_classeContext *> MinhaLinguagemParser::ProgramaContext::declaracao_classe() {
  return getRuleContexts<MinhaLinguagemParser::Declaracao_classeContext>();
}

MinhaLinguagemParser::Declaracao_classeContext* MinhaLinguagemParser::ProgramaContext::declaracao_classe(size_t i) {
  return getRuleContext<MinhaLinguagemParser::Declaracao_classeContext>(i);
}

std::vector<MinhaLinguagemParser::Declaracao_funcaoContext *> MinhaLinguagemParser::ProgramaContext::declaracao_funcao() {
  return getRuleContexts<MinhaLinguagemParser::Declaracao_funcaoContext>();
}

MinhaLinguagemParser::Declaracao_funcaoContext* MinhaLinguagemParser::ProgramaContext::declaracao_funcao(size_t i) {
  return getRuleContext<MinhaLinguagemParser::Declaracao_funcaoContext>(i);
}


size_t MinhaLinguagemParser::ProgramaContext::getRuleIndex() const {
  return MinhaLinguagemParser::RulePrograma;
}

void MinhaLinguagemParser::ProgramaContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MinhaLinguagemListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPrograma(this);
}

void MinhaLinguagemParser::ProgramaContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MinhaLinguagemListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPrograma(this);
}


std::any MinhaLinguagemParser::ProgramaContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MinhaLinguagemVisitor*>(visitor))
    return parserVisitor->visitPrograma(this);
  else
    return visitor->visitChildren(this);
}

MinhaLinguagemParser::ProgramaContext* MinhaLinguagemParser::programa() {
  ProgramaContext *_localctx = _tracker.createInstance<ProgramaContext>(_ctx, getState());
  enterRule(_localctx, 0, MinhaLinguagemParser::RulePrograma);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(34); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(34);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case MinhaLinguagemParser::PUBLIC:
        case MinhaLinguagemParser::PRIVATE:
        case MinhaLinguagemParser::PROTECTED:
        case MinhaLinguagemParser::STATIC:
        case MinhaLinguagemParser::CLASS: {
          setState(32);
          declaracao_classe();
          break;
        }

        case MinhaLinguagemParser::STRING_TYPE:
        case MinhaLinguagemParser::INT:
        case MinhaLinguagemParser::FLOAT:
        case MinhaLinguagemParser::CHAR:
        case MinhaLinguagemParser::STRING:
        case MinhaLinguagemParser::VOID:
        case MinhaLinguagemParser::IDENTIFICADOR: {
          setState(33);
          declaracao_funcao();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(36); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 34772056244224) != 0));
    setState(38);
    match(MinhaLinguagemParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Declaracao_classeContext ------------------------------------------------------------------

MinhaLinguagemParser::Declaracao_classeContext::Declaracao_classeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MinhaLinguagemParser::Declaracao_classeContext::CLASS() {
  return getToken(MinhaLinguagemParser::CLASS, 0);
}

tree::TerminalNode* MinhaLinguagemParser::Declaracao_classeContext::ABRE_CHAVES() {
  return getToken(MinhaLinguagemParser::ABRE_CHAVES, 0);
}

tree::TerminalNode* MinhaLinguagemParser::Declaracao_classeContext::FECHA_CHAVES() {
  return getToken(MinhaLinguagemParser::FECHA_CHAVES, 0);
}

std::vector<tree::TerminalNode *> MinhaLinguagemParser::Declaracao_classeContext::IDENTIFICADOR() {
  return getTokens(MinhaLinguagemParser::IDENTIFICADOR);
}

tree::TerminalNode* MinhaLinguagemParser::Declaracao_classeContext::IDENTIFICADOR(size_t i) {
  return getToken(MinhaLinguagemParser::IDENTIFICADOR, i);
}

tree::TerminalNode* MinhaLinguagemParser::Declaracao_classeContext::STATIC() {
  return getToken(MinhaLinguagemParser::STATIC, 0);
}

std::vector<MinhaLinguagemParser::MembroContext *> MinhaLinguagemParser::Declaracao_classeContext::membro() {
  return getRuleContexts<MinhaLinguagemParser::MembroContext>();
}

MinhaLinguagemParser::MembroContext* MinhaLinguagemParser::Declaracao_classeContext::membro(size_t i) {
  return getRuleContext<MinhaLinguagemParser::MembroContext>(i);
}

tree::TerminalNode* MinhaLinguagemParser::Declaracao_classeContext::PUBLIC() {
  return getToken(MinhaLinguagemParser::PUBLIC, 0);
}

tree::TerminalNode* MinhaLinguagemParser::Declaracao_classeContext::PRIVATE() {
  return getToken(MinhaLinguagemParser::PRIVATE, 0);
}

tree::TerminalNode* MinhaLinguagemParser::Declaracao_classeContext::PROTECTED() {
  return getToken(MinhaLinguagemParser::PROTECTED, 0);
}


size_t MinhaLinguagemParser::Declaracao_classeContext::getRuleIndex() const {
  return MinhaLinguagemParser::RuleDeclaracao_classe;
}

void MinhaLinguagemParser::Declaracao_classeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MinhaLinguagemListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDeclaracao_classe(this);
}

void MinhaLinguagemParser::Declaracao_classeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MinhaLinguagemListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDeclaracao_classe(this);
}


std::any MinhaLinguagemParser::Declaracao_classeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MinhaLinguagemVisitor*>(visitor))
    return parserVisitor->visitDeclaracao_classe(this);
  else
    return visitor->visitChildren(this);
}

MinhaLinguagemParser::Declaracao_classeContext* MinhaLinguagemParser::declaracao_classe() {
  Declaracao_classeContext *_localctx = _tracker.createInstance<Declaracao_classeContext>(_ctx, getState());
  enterRule(_localctx, 2, MinhaLinguagemParser::RuleDeclaracao_classe);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(41);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 229376) != 0)) {
      setState(40);
      _la = _input->LA(1);
      if (!((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & 229376) != 0))) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
    }
    setState(44);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == MinhaLinguagemParser::STATIC) {
      setState(43);
      match(MinhaLinguagemParser::STATIC);
    }
    setState(46);
    match(MinhaLinguagemParser::CLASS);
    setState(47);
    antlrcpp::downCast<Declaracao_classeContext *>(_localctx)->ID = match(MinhaLinguagemParser::IDENTIFICADOR);
    setState(50);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == MinhaLinguagemParser::T__0) {
      setState(48);
      match(MinhaLinguagemParser::T__0);
      setState(49);
      match(MinhaLinguagemParser::IDENTIFICADOR);
    }
    setState(52);
    match(MinhaLinguagemParser::ABRE_CHAVES);
    setState(56);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 34634618077184) != 0)) {
      setState(53);
      membro();
      setState(58);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(59);
    match(MinhaLinguagemParser::FECHA_CHAVES);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MembroContext ------------------------------------------------------------------

MinhaLinguagemParser::MembroContext::MembroContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MinhaLinguagemParser::Declaracao_variavelContext* MinhaLinguagemParser::MembroContext::declaracao_variavel() {
  return getRuleContext<MinhaLinguagemParser::Declaracao_variavelContext>(0);
}

MinhaLinguagemParser::AnotacaoContext* MinhaLinguagemParser::MembroContext::anotacao() {
  return getRuleContext<MinhaLinguagemParser::AnotacaoContext>(0);
}

MinhaLinguagemParser::Declaracao_funcaoContext* MinhaLinguagemParser::MembroContext::declaracao_funcao() {
  return getRuleContext<MinhaLinguagemParser::Declaracao_funcaoContext>(0);
}

MinhaLinguagemParser::Declaracao_construtorContext* MinhaLinguagemParser::MembroContext::declaracao_construtor() {
  return getRuleContext<MinhaLinguagemParser::Declaracao_construtorContext>(0);
}


size_t MinhaLinguagemParser::MembroContext::getRuleIndex() const {
  return MinhaLinguagemParser::RuleMembro;
}

void MinhaLinguagemParser::MembroContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MinhaLinguagemListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMembro(this);
}

void MinhaLinguagemParser::MembroContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MinhaLinguagemListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMembro(this);
}


std::any MinhaLinguagemParser::MembroContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MinhaLinguagemVisitor*>(visitor))
    return parserVisitor->visitMembro(this);
  else
    return visitor->visitChildren(this);
}

MinhaLinguagemParser::MembroContext* MinhaLinguagemParser::membro() {
  MembroContext *_localctx = _tracker.createInstance<MembroContext>(_ctx, getState());
  enterRule(_localctx, 4, MinhaLinguagemParser::RuleMembro);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(73);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(62);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == MinhaLinguagemParser::OVERRIDE) {
        setState(61);
        anotacao();
      }
      setState(64);
      declaracao_variavel();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(66);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == MinhaLinguagemParser::OVERRIDE) {
        setState(65);
        anotacao();
      }
      setState(68);
      declaracao_funcao();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(70);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == MinhaLinguagemParser::OVERRIDE) {
        setState(69);
        anotacao();
      }
      setState(72);
      declaracao_construtor();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Declaracao_construtorContext ------------------------------------------------------------------

MinhaLinguagemParser::Declaracao_construtorContext::Declaracao_construtorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> MinhaLinguagemParser::Declaracao_construtorContext::IDENTIFICADOR() {
  return getTokens(MinhaLinguagemParser::IDENTIFICADOR);
}

tree::TerminalNode* MinhaLinguagemParser::Declaracao_construtorContext::IDENTIFICADOR(size_t i) {
  return getToken(MinhaLinguagemParser::IDENTIFICADOR, i);
}

std::vector<tree::TerminalNode *> MinhaLinguagemParser::Declaracao_construtorContext::ABRE_PARENTESES() {
  return getTokens(MinhaLinguagemParser::ABRE_PARENTESES);
}

tree::TerminalNode* MinhaLinguagemParser::Declaracao_construtorContext::ABRE_PARENTESES(size_t i) {
  return getToken(MinhaLinguagemParser::ABRE_PARENTESES, i);
}

std::vector<tree::TerminalNode *> MinhaLinguagemParser::Declaracao_construtorContext::FECHA_PARENTESES() {
  return getTokens(MinhaLinguagemParser::FECHA_PARENTESES);
}

tree::TerminalNode* MinhaLinguagemParser::Declaracao_construtorContext::FECHA_PARENTESES(size_t i) {
  return getToken(MinhaLinguagemParser::FECHA_PARENTESES, i);
}

MinhaLinguagemParser::BlocoContext* MinhaLinguagemParser::Declaracao_construtorContext::bloco() {
  return getRuleContext<MinhaLinguagemParser::BlocoContext>(0);
}

MinhaLinguagemParser::ParametrosContext* MinhaLinguagemParser::Declaracao_construtorContext::parametros() {
  return getRuleContext<MinhaLinguagemParser::ParametrosContext>(0);
}

tree::TerminalNode* MinhaLinguagemParser::Declaracao_construtorContext::DOIS_PONTOS() {
  return getToken(MinhaLinguagemParser::DOIS_PONTOS, 0);
}

tree::TerminalNode* MinhaLinguagemParser::Declaracao_construtorContext::PUBLIC() {
  return getToken(MinhaLinguagemParser::PUBLIC, 0);
}

tree::TerminalNode* MinhaLinguagemParser::Declaracao_construtorContext::PRIVATE() {
  return getToken(MinhaLinguagemParser::PRIVATE, 0);
}

tree::TerminalNode* MinhaLinguagemParser::Declaracao_construtorContext::PROTECTED() {
  return getToken(MinhaLinguagemParser::PROTECTED, 0);
}

std::vector<MinhaLinguagemParser::ExpressaoContext *> MinhaLinguagemParser::Declaracao_construtorContext::expressao() {
  return getRuleContexts<MinhaLinguagemParser::ExpressaoContext>();
}

MinhaLinguagemParser::ExpressaoContext* MinhaLinguagemParser::Declaracao_construtorContext::expressao(size_t i) {
  return getRuleContext<MinhaLinguagemParser::ExpressaoContext>(i);
}

std::vector<tree::TerminalNode *> MinhaLinguagemParser::Declaracao_construtorContext::VIRGULA() {
  return getTokens(MinhaLinguagemParser::VIRGULA);
}

tree::TerminalNode* MinhaLinguagemParser::Declaracao_construtorContext::VIRGULA(size_t i) {
  return getToken(MinhaLinguagemParser::VIRGULA, i);
}


size_t MinhaLinguagemParser::Declaracao_construtorContext::getRuleIndex() const {
  return MinhaLinguagemParser::RuleDeclaracao_construtor;
}

void MinhaLinguagemParser::Declaracao_construtorContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MinhaLinguagemListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDeclaracao_construtor(this);
}

void MinhaLinguagemParser::Declaracao_construtorContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MinhaLinguagemListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDeclaracao_construtor(this);
}


std::any MinhaLinguagemParser::Declaracao_construtorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MinhaLinguagemVisitor*>(visitor))
    return parserVisitor->visitDeclaracao_construtor(this);
  else
    return visitor->visitChildren(this);
}

MinhaLinguagemParser::Declaracao_construtorContext* MinhaLinguagemParser::declaracao_construtor() {
  Declaracao_construtorContext *_localctx = _tracker.createInstance<Declaracao_construtorContext>(_ctx, getState());
  enterRule(_localctx, 6, MinhaLinguagemParser::RuleDeclaracao_construtor);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(76);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 229376) != 0)) {
      setState(75);
      _la = _input->LA(1);
      if (!((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & 229376) != 0))) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
    }
    setState(78);
    match(MinhaLinguagemParser::IDENTIFICADOR);
    setState(79);
    match(MinhaLinguagemParser::ABRE_PARENTESES);
    setState(81);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 34634616799232) != 0)) {
      setState(80);
      parametros();
    }
    setState(83);
    match(MinhaLinguagemParser::FECHA_PARENTESES);
    setState(98);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == MinhaLinguagemParser::DOIS_PONTOS) {
      setState(84);
      match(MinhaLinguagemParser::DOIS_PONTOS);
      setState(85);
      match(MinhaLinguagemParser::IDENTIFICADOR);
      setState(86);
      match(MinhaLinguagemParser::ABRE_PARENTESES);
      setState(95);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & 2515682604351556) != 0)) {
        setState(87);
        expressao(0);
        setState(92);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == MinhaLinguagemParser::VIRGULA) {
          setState(88);
          match(MinhaLinguagemParser::VIRGULA);
          setState(89);
          expressao(0);
          setState(94);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
      }
      setState(97);
      match(MinhaLinguagemParser::FECHA_PARENTESES);
    }
    setState(100);
    bloco();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Declaracao_funcaoContext ------------------------------------------------------------------

MinhaLinguagemParser::Declaracao_funcaoContext::Declaracao_funcaoContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MinhaLinguagemParser::TipoContext* MinhaLinguagemParser::Declaracao_funcaoContext::tipo() {
  return getRuleContext<MinhaLinguagemParser::TipoContext>(0);
}

tree::TerminalNode* MinhaLinguagemParser::Declaracao_funcaoContext::ABRE_PARENTESES() {
  return getToken(MinhaLinguagemParser::ABRE_PARENTESES, 0);
}

tree::TerminalNode* MinhaLinguagemParser::Declaracao_funcaoContext::FECHA_PARENTESES() {
  return getToken(MinhaLinguagemParser::FECHA_PARENTESES, 0);
}

MinhaLinguagemParser::BlocoContext* MinhaLinguagemParser::Declaracao_funcaoContext::bloco() {
  return getRuleContext<MinhaLinguagemParser::BlocoContext>(0);
}

tree::TerminalNode* MinhaLinguagemParser::Declaracao_funcaoContext::IDENTIFICADOR() {
  return getToken(MinhaLinguagemParser::IDENTIFICADOR, 0);
}

MinhaLinguagemParser::ParametrosContext* MinhaLinguagemParser::Declaracao_funcaoContext::parametros() {
  return getRuleContext<MinhaLinguagemParser::ParametrosContext>(0);
}


size_t MinhaLinguagemParser::Declaracao_funcaoContext::getRuleIndex() const {
  return MinhaLinguagemParser::RuleDeclaracao_funcao;
}

void MinhaLinguagemParser::Declaracao_funcaoContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MinhaLinguagemListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDeclaracao_funcao(this);
}

void MinhaLinguagemParser::Declaracao_funcaoContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MinhaLinguagemListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDeclaracao_funcao(this);
}


std::any MinhaLinguagemParser::Declaracao_funcaoContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MinhaLinguagemVisitor*>(visitor))
    return parserVisitor->visitDeclaracao_funcao(this);
  else
    return visitor->visitChildren(this);
}

MinhaLinguagemParser::Declaracao_funcaoContext* MinhaLinguagemParser::declaracao_funcao() {
  Declaracao_funcaoContext *_localctx = _tracker.createInstance<Declaracao_funcaoContext>(_ctx, getState());
  enterRule(_localctx, 8, MinhaLinguagemParser::RuleDeclaracao_funcao);
  size_t _la = 0;
